--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^6.7.1",
     "date-fns": "^2.29.3",
     "style-loader": "^3.3.1",
+    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
