--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "date-fns": "^2.29.3",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "style-loader": "^3.3.1",
-    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3",
+    "uuid": "^9.0.0"
   }
 }
